logs/mobility/build.make.081.log.stderr
/home/steven/rover_workspace/src/mobility/src/PickUpController.cpp: In member function ‘PickUpResult PickUpController::pickUpSelectedTarget(bool)’:
/home/steven/rover_workspace/src/mobility/src/PickUpController.cpp:128:22: error: jump to case label [-fpermissive]
 case (PICKING_UP_CUBE):
                      ^
/home/steven/rover_workspace/src/mobility/src/PickUpController.cpp:111:7: error:   crosses initialization of ‘float timeToEnsureStraightening’
 float timeToEnsureStraightening = 0.0;
       ^
/home/steven/rover_workspace/src/mobility/src/PickUpController.cpp:140:32: error: jump to case label [-fpermissive]
 case (WAIT_BEFORE_RAISING_WRIST):
                                ^
/home/steven/rover_workspace/src/mobility/src/PickUpController.cpp:111:7: error:   crosses initialization of ‘float timeToEnsureStraightening’
 float timeToEnsureStraightening = 0.0;
       ^
/home/steven/rover_workspace/src/mobility/src/PickUpController.cpp:155:23: error: jump to case label [-fpermissive]
 case (VERIFYING_PICKUP):
                       ^
/home/steven/rover_workspace/src/mobility/src/PickUpController.cpp:111:7: error:   crosses initialization of ‘float timeToEnsureStraightening’
 float timeToEnsureStraightening = 0.0;
       ^
/home/steven/rover_workspace/src/mobility/src/PickUpController.cpp:173:27: error: jump to case label [-fpermissive]
 case(PICKUP_FAILED_BACK_UP):
                           ^
/home/steven/rover_workspace/src/mobility/src/PickUpController.cpp:111:7: error:   crosses initialization of ‘float timeToEnsureStraightening’
 float timeToEnsureStraightening = 0.0;
       ^
/home/steven/rover_workspace/src/mobility/src/PickUpController.cpp:192:19: error: jump to case label [-fpermissive]
 case (DONE_FAILING):
                   ^
/home/steven/rover_workspace/src/mobility/src/PickUpController.cpp:111:7: error:   crosses initialization of ‘float timeToEnsureStraightening’
 float timeToEnsureStraightening = 0.0;
       ^
/home/steven/rover_workspace/src/mobility/src/PickUpController.cpp:197:19: error: jump to case label [-fpermissive]
 case (DONE_SUCCESS):
                   ^
/home/steven/rover_workspace/src/mobility/src/PickUpController.cpp:111:7: error:   crosses initialization of ‘float timeToEnsureStraightening’
 float timeToEnsureStraightening = 0.0;
       ^
/home/steven/rover_workspace/src/mobility/src/PickUpController.cpp:204:1: error: jump to case label [-fpermissive]
 default:
 ^
/home/steven/rover_workspace/src/mobility/src/PickUpController.cpp:111:7: error:   crosses initialization of ‘float timeToEnsureStraightening’
 float timeToEnsureStraightening = 0.0;
       ^
make[2]: *** [CMakeFiles/mobility.dir/src/PickUpController.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [CMakeFiles/mobility.dir/all] Error 2
make: *** [all] Error 2
